objects/A_La_Carte_Item_PE_PC_Subscription__mdt.object
<CustomObject>
    <description>Dummy Ala Carte part number field at the order line level and populate this value for the ala carte lines for pureconnect and pureengage subscription</description>
    <fields>
        <fullName>Ala_Carte_Part_Number__c</fullName>
        <label>Ala Carte Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base Package?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concurrent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect_Sale__c</fullName>
        <label>Direct/Indirect Sale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect Subscription</fullName>
                    <default>true</default>
                    <label>PureConnect Subscription</label>
                </value>
                <value>
                    <fullName>PureEngage Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>A La Carte Item - PE/PC Subscription</label>
    <pluralLabel>A La Carte Items - PE/PC Subscription</pluralLabel>
</CustomObject>